--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@firebase/storage": "^0.11.2",
     "@react-firebase/auth": "^0.2.10",
     "@react-firebase/database": "^0.3.11",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,8 +19,11 @@
     "flowbite-react": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "sweetalert2": "^11.7.27",
     "tw-elements-react": "^1.0.0-alpha1",
     "typescript": "^4.9.5",
